--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 click==7.1.2
 dnspython==2.0.0
+dominate==2.6.0
 Flask==1.1.2
+Flask-Bootstrap==3.3.7.1
 Flask-PyMongo==2.3.0
 itsdangerous==1.1.0
 pymongo==3.11.1
+visitor==0.1.3
 Werkzeug==1.0.1
